Fixed issue where toggling dropdown by databinding to a checkbox would close again immediately, by adding 1ms delay to attaching clickout handler

--- a/tests/dummy/app/templates/application.hbs
+++ b/tests/dummy/app/templates/application.hbs
@@ -1,6 +1,8 @@
-<h2 id="title">Dropdown tests</h2>
+<header>
+  <h1 id="title">Dropdown tests</h1>
 
-{{#link-to 'dropdownTest'}}Dropdown Test{{/link-to}} |
-{{#link-to 'dropdownMixinTest'}}Dropdown Mixin Test{{/link-to}} |
+  {{#link-to 'dropdownTest'}}Dropdown Test{{/link-to}} |
+  {{#link-to 'dropdownMixinTest'}}Dropdown Mixin Test{{/link-to}}
+</header>
 
 {{outlet}}
