--- a/tests/dummy/app/templates/dropdown-mixin-test.hbs
+++ b/tests/dummy/app/templates/dropdown-mixin-test.hbs
@@ -1,1 +1,6 @@
-{{user-controls}}
+<label>
+  {{input type="checkbox" checked=dropdownExpanded id="dropdownCheckbox"}}
+  dropdownExpanded
+</label>
+
+{{user-controls dropdownExpanded=dropdownExpanded}}
