Changes the way click bubbling is prevented from the dropdown and toggle, fixes #7

--- a/tests/dummy/app/templates/application.hbs
+++ b/tests/dummy/app/templates/application.hbs
@@ -2,7 +2,8 @@
   <h1 id="title">Dropdown tests</h1>
 
   {{#link-to 'dropdownTest'}}Dropdown Test{{/link-to}} |
-  {{#link-to 'dropdownMixinTest'}}Dropdown Mixin Test{{/link-to}}
+  {{#link-to 'dropdownMixinTest'}}Dropdown Mixin Test{{/link-to}} |
+  {{#link-to 'dropdownWithCheckboxTest'}}Dropdown with Checkbox Test{{/link-to}}
 </header>
 
 {{outlet}}
