Upgrade to ember-cli 2.18.2

--- a/tests/dummy/app/templates/application.hbs
+++ b/tests/dummy/app/templates/application.hbs
@@ -1,9 +1,9 @@
 <header>
   <h1 id="title">Dropdown tests</h1>
 
-  {{#link-to 'dropdownTest'}}Dropdown Test{{/link-to}} |
-  {{#link-to 'dropdownMixinTest'}}Dropdown Mixin Test{{/link-to}} |
-  {{#link-to 'dropdownWithCheckboxTest'}}Dropdown with Checkbox Test{{/link-to}}
+  {{#link-to 'dropdown-test'}}Dropdown Test{{/link-to}} |
+  {{#link-to 'dropdown-mixin-test'}}Dropdown Mixin Test{{/link-to}} |
+  {{#link-to 'dropdown-with-checkbox-test'}}Dropdown with Checkbox Test{{/link-to}}
 </header>
 
 {{outlet}}
